fixed horizontal scrolling bug

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -76,6 +76,11 @@
 }
 
 @media screen and (max-width: 960px) {
+  html {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
   .NavbarItems {
     position: relative;
   }
